# auto-acmg

./: .dockerignore  .env.dev  .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  Makefile  Pipfile  README.md  ann.py  autopvs1.py  codecov.yml  cohens_kappa_results.csv  cohens_kappa_results_1.csv  ex.json  example_variants.txt  f.json  f.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-build.yml  docker-cleanup-pr.yml  docker-cleanup-untagged.yml  main-ci.yml  pylint.yml  release-please.yml
_tests/: test_cli.py  test_utils.py  utils.py
_tests/api/: test_annonars.py
docs/: acmg_pvs1.rst  acmg_pvs1_algorithm_details.rst  acmg_seqvar_implementation.rst  acmg_seqvars_criteria.rst  acmg_seqvars_details.rst  acmg_seqvars_implementation.rst  acmg_strucvar_implementation.rst  api_reference.rst  auto_acmg_implementation.rst  benchmarking.rst  conf.py  dev_quickstart.rst  doc_algorithm.rst  doc_algorithm_details.rst  index.rst  internal_api.rst  refs.bib  requirements.txt  usage.rst
src/: atuo_ba1_bs1_bs_2_pm2.py  atuo_ba1_bs1_bs_2_ps4_pm2.py  autoPVS1.py  auto_acmg.py  auto_pm4_bp3.py  auto_ps1.py  auto_ps1_pm5.py  cli.py  comparison.py  exceptions.py  genome_builds.py  main.py  pvs1.py  pvs1_types.py  seqvar.py  seqvar_pvs1.py  strucvar_pvs1.py  types.py  utils.py
tests/: conftest.py  test_auto_acmg.py  test_auto_ps1_pm5.py  test_autopvs1.py  test_cli.py  test_e2e_pvs1.py  test_genome_builds.py  test_seqvar.py  test_seqvar_pvs1.py  test_utils.py  utils.py
(+311 files in other folders)
