[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-acmg"
version = "0.1.0"
authors = [
  {name = "Dzmitry Hramyka", email = "dzmitry.hramyka@bih-charite.de"},
]
description = "Automated prediction of the PVS1 ACMG/AMP variant classification"
readme = "README.md"
keywords = ["variant classification", "ACMG"]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bihealth/auto-acmg"
Documentation = "https://auto-acmg.readthedocs.io/en/latest"

[tool.pytest.ini_options]
required_plugins = ["pytest-env"]
markers = [
    "remote: marks test as calling to API at https://reev.bihealth.org",
]
env = [
    "USE_CACHE=0",
    "API_REEV_URL=https://reev.cubi.bihealth.org/internal/proxy",
]
